syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.Reports";

import "Reports/Models.proto";

service ReportsApi {
  rpc GetByIds(GetReportsByIdsRequest) returns (GetReportsByIdsResult);
}
